@@ -1,9 +1,14 @@
 package com.group01.ecommerce_app.dto;
 
+import java.util.Date;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.group01.ecommerce_app.model.Cart;
+import com.group01.ecommerce_app.model.Item;
 
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -23,47 +28,29 @@ public class CartDTO {
         @JsonInclude(Include.NON_NULL)
         private UserDTO userDto;
 
-        // private List<ItemDTO> items = new ArrayList<>();
-        // private BigDecimal totalPrice;
+        private int quantity;
+        private Double totalPrice;
+        // private Long productId;
+        private List<ItemDTO> items;
 
-        // Getters and Setters
-
-        // Converts Cart entity to CartDTO
         public static CartDTO convertToCartDTO(final Cart cart) {
-                // return new CartDTO(
-                // cart.getId(),
-                // cart.getItems().stream().map(ItemDTO::convertToItemDTO).toList(),
-                // cart.getTotalPrice());
-
-                return CartDTO.builder()
-                                .id(cart.getId())
-                                .userId(cart.getUser().getId())
-                                // .userDto(
-                                // UserDTO.builder()
-                                // .id(cart.getId())
-                                // .build())
-                                // .items(cart.getItems().stream()
-                                // .map(ItemDTO::convertToItemDTO)
-                                // .toList()) // Convert each Item to ItemDTO
-                                .build();
+                CartDTO cartDTO = new CartDTO();
+                cartDTO.setId(cart.getId());
+                cartDTO.setQuantity(cart.getQuantity());
+                cartDTO.setTotalPrice(cart.getTotalPrice());
+                cartDTO.setUserId(cart.getUser().getId());
+                cartDTO.setItems(cart.getItems().stream()
+                                .map(ItemDTO::convertToItemDTO)
+                                .collect(Collectors.toList()));
+                return cartDTO;
         }
 
-        // public static CartDto map(final Cart cart) {
-        // return CartDto.builder()
-        // .cartId(cart.getCartId())
-        // .userId(cart.getUserId())
-        // .userDto(
-        // UserDto.builder()
-        // .userId(cart.getUserId())
-        // .build())
-        // .build();
-        // }
-
-        // public static Cart map(final CartDto cartDto) {
-        // return Cart.builder()
-        // .cartId(cartDto.getCartId())
-        // .userId(cartDto.getUserId())
-        // .build();
-        // }
-
+        public static ItemDTO convertToItemDTO(Item item) {
+                ItemDTO itemDTO = new ItemDTO();
+                itemDTO.setId(item.getId());
+                itemDTO.setQuantity(item.getQuantity());
+                itemDTO.setUnitPrice(item.getUnitPrice());
+                itemDTO.setTotalPrice(item.getTotalPrice());
+                return itemDTO;
+        }
 }
